Add Endianness Option

--- a/src/dialogs/OptionsDialog.ui
+++ b/src/dialogs/OptionsDialog.ui
@@ -225,9 +225,9 @@
          <property name="geometry">
           <rect>
            <x>0</x>
-           <y>0</y>
-           <width>564</width>
-           <height>805</height>
+           <y>-611</y>
+           <width>565</width>
+           <height>856</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -601,6 +601,13 @@
                     </item>
                    </widget>
                   </item>
+                 </layout>
+                </item>
+                <item>
+                 <layout class="QHBoxLayout" name="horizontalLayout_5">
+                  <property name="topMargin">
+                   <number>0</number>
+                  </property>
                   <item>
                    <widget class="QLabel" name="bitsLabel">
                     <property name="sizePolicy">
@@ -639,6 +646,44 @@
                     <item>
                      <property name="text">
                       <string>64</string>
+                     </property>
+                    </item>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="endiannessLabel">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="text">
+                     <string>Endianness: </string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QComboBox" name="endiannessComboBox">
+                    <property name="editable">
+                     <bool>false</bool>
+                    </property>
+                    <property name="currentText">
+                     <string notr="true">Auto</string>
+                    </property>
+                    <item>
+                     <property name="text">
+                      <string>Auto</string>
+                     </property>
+                    </item>
+                    <item>
+                     <property name="text">
+                      <string>Little</string>
+                     </property>
+                    </item>
+                    <item>
+                     <property name="text">
+                      <string>Big</string>
                      </property>
                     </item>
                    </widget>
